fixed a small bug that was causing buttons to overlap in  the mobile displays

--- a/rock paper scissors/style.css
+++ b/rock paper scissors/style.css
@@ -45,7 +45,7 @@ h3 {
     color: #fff;
     border: none;
     padding: 10px 20px;
-    margin: 0 10px;
+    margin: 5px 10px;
     font-size: 1rem;
     border-radius: 5px;
     cursor: pointer;
